--- a/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -19,3 +19,14 @@ af|inputText.login::content {
     /*margin:0px 0px 0px 42px;*/
    /* margin-top: 20px;*/
 }
+
+af|button.FondoRojoLetraBlanca {
+    background-image: none;
+}
+
+af|button.FondoRojoLetraBlanca:text-only {
+    background-image: none;
+    background-color: rgb(205,0,0);
+    color: rgb(255,255,255);
+    border-color: rgb(205,0,0);
+}
