--- a/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -27,6 +27,21 @@ af|button.FondoRojoLetraBlanca {
     border-color: rgb(205,0,0);
 }
 
+af|button.FondoVerdeLetraRoja {
+    background-image: none;
+    background-color: Green;
+    color: rgb(255,255,255);
+    font-weight: bold;
+    border-color: Green;
+}
+
+af|button.FondoRojoLetraVerde{
+    background-image: none;
+    background-color: rgb(205,0,0);
+    color: rgb(255,255,255);
+    font-weight: bold;
+    border-color: rgb(205,0,0);
+}
 
 af|button.flechaUp {
     background-image: url("../../recursos/img/usuarios/up.png");
