--- a/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -20,6 +20,16 @@ af|inputText.login::content {
    /* margin-top: 20px;*/
 }
 
+.subTitulos{
+    color:Navy; 
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:bold; 
+    text-decoration: none;
+     border-bottom: 2px solid white;
+    text-align:center;
+    font-size:small;
+}
+
 af|button.FondoRojoLetraBlanca {
     background-image: none;
     background-color: rgb(205,0,0);
