--- a/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -43,6 +43,7 @@ af|button.FondoRojoLetraBlanca {
     background-image: none;
     color: rgb(255,255,255);
     border-color: rgb(205,0,0);
+    background-color: rgb(205,0,0);
 }
 
 af|button.FondoVerdeLetraRoja {
@@ -50,6 +51,7 @@ af|button.FondoVerdeLetraRoja {
     color: rgb(255,255,255);
     font-weight: bold;
     border-color: Green;
+    background-color: Green;
 }
 
 af|button.FondoRojoLetraVerde{
@@ -57,6 +59,7 @@ af|button.FondoRojoLetraVerde{
     color: rgb(255,255,255);
     font-weight: bold;
     border-color: rgb(205,0,0);
+    background-color: rgb(205,0,0);
 }
 
 af|button.flechaUp {
