--- a/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -91,7 +91,10 @@ af|button.flechaDown:text-only {
     position: absolute;
     z-index: 999;
 }
-
+.arriba3{
+    position: absolute;
+    z-index: 555;
+}
 .abajo{
     position: relative;
 }
