--- a/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -9,7 +9,7 @@ af|inputText.login::content {
 }
 
 .titulos{
-    color:rgb(43,78,104); 
+    color:rgb(104,100,97);/*rgb(43,78,104); */
     font-family:Arial, Helvetica, sans-serif;
     font-weight:bold; 
     text-decoration: none;
@@ -39,11 +39,19 @@ af|button, af|button:text-only {
     font-size:small;
 }
 
+
 af|button.FondoRojoLetraBlanca {
     background-image: none;
     color: rgb(255,255,255);
     border-color: rgb(205,0,0);
     background-color: rgb(205,0,0);
+}
+
+af|button.FondoGrisLetraGris {
+    background-image: none;
+    color: rgb(104,100,97);
+    border-color: rgb(219,214,208);
+    background-color: rgb(219,214,208);
 }
 
 af|button.FondoVerdeLetraRoja {
