--- a/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -30,13 +30,22 @@ af|button, af|button:text-only {
 */
 
 .subTitulos{
-    color:Navy; 
+    color:rgb(104,100,97);
     font-family:Arial, Helvetica, sans-serif;
     font-weight:bold; 
     text-decoration: none;
      border-bottom: 2px solid white;
     text-align:center;
     font-size:small;
+}
+
+.subTitulos2{
+    color:rgb(104,100,97);
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:bold; 
+    text-decoration: none;
+    text-align:center;
+    font-size: xx-small;
 }
 
 
