--- a/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -25,6 +25,13 @@ af|inputText.rojo::content {
     background-color: red;
 }
 
+af|inputText.naranja::content {
+    color:black; 
+    font-weight: bold;
+    text-align:center;
+    background-color: orange;
+}
+
 af|inputText.amarillo::content {
     color:black; 
     font-weight: bold;
