--- a/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
+++ b/branches/branchSPED27122013/SPED_WEB/public_html/skins/SpedSkin/SpedSkin.css
@@ -67,7 +67,12 @@ af|button, af|button:text-only {
     border-color:rgb(43,78,104);
 }
 */
-
+.errorColor{
+    color:Red; 
+    font-family:Geneva, Arial, Helvetica, sans-serif; 
+    font-weight:bold; 
+    text-align:center;
+}
 .subTitulos{
     color:rgb(104,100,97);
     font-family:Arial, Helvetica, sans-serif;
